--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,5 +3,6 @@
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
+        <li><a href="#">projects</a></li>
     </ul>
 </nav>
