--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -4,31 +4,35 @@ body {
 }
 
 a {
-    color: #2ab672;
+    color: #c71998;
+    text-decoration: none;
+    padding:15px;
 }
 
-a:hover {
-    color: #c71998;
+header nav ul li a:hover {
+    background-color: #c71998;
+    color: white;
+    border-radius: 20px;
 }
 
 header, footer, div.page {
     width: 760px;
     margin: 0 auto;
-    background: #daeef3;
+    background: #f6fa86;
     padding: 20px 30px;
 }
 
 header h1 {
-    color: #e25518;
+    color:#c71998 ;
     margin: 0;
     font-weight: normal;
-    font-size: 42px;
+    font-size: 25px;
 }
 
 header nav ul {
     list-style: none;
-    margin: 0;
-    padding: 0;
+    margin: 25px;
+    padding: 0px;
 }
 
 header nav ul li {
@@ -37,34 +41,10 @@ header nav ul li {
     padding: 0;
 }
 
+
 div.page {
-    background: #f1fbfe;
+    background: #d696c5;
 }
 
-nav {
-    background-color: #333;
-    color: #fff;
-}
-
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-nav li {
-    display: inline-block;
-}
-
-nav a {
-    display: block;
-    padding: 10px;
-    color: #fff;
-    text-decoration: none;
-}
-
-nav a:hover {
-    background-color: #555;
-}
 
 
