--- a/templates/page.html
+++ b/templates/page.html
@@ -3,4 +3,5 @@
 {% block body %}
   <h2>{{ this.title }}</h2>
   {{ this.body }}
+  {% if this.description %}<p>{{ this.description }}</p>{% endif %}
 {% endblock %}
